<resources>
    <string name="app_name">Cars World</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_text">Cars World</string>
    <string name="list_head_title">List of Manufactures</string>
    <string name="list_left_head">Country</string>
    <string name="list_right_head">Mfr_common_name</string>
    <string name="label_country">Country : </string>
    <string name="label_common_name">Mft_CommonName: </string>
    <string name="label_id">Mfr_ID : </string>
    <string name="label_mfr_id">Mfr_Name : </string>
    <string name="label_recycler_view">Vehicle Type</string>
    <string name="back_btn_label">Back</string>
    <string name="toolbar_title">Cars World</string>
    <string name="login_title">Login Here</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_label">Login</string>
    <string name="profileScreen_id_label">ID</string>
    <string name="profileScreen_username_label">Username</string>
    <string name="profileScreen_email_label">Email</string>
    <string name="profileScreen_fullname_label">Full Name</string>
    <string name="profileScreen_gender_label">Gender</string>
    <string name="profileScreen_heading">Profile Info</string>




</resources>